--- a/main.html
+++ b/main.html
@@ -6,7 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+   <p>This is a demo of box model try toreplicatethis
+	   box model in Html and css and try to pass all the test
+	   cases</p>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
