--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-   <p>This is a demo of box model try toreplicatethis
-	   box model in Html and css and try to pass all the test
+   <p>This is a demo of box model try to replicate this
+	   box model in Html and Css and try to pass all the test
 	   cases</p>
 
 	
