--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-   <p>This is a demo of box model try to replicate this
+   <div>This is a demo of box model try to replicate this
 	   box model in Html and Css and try to pass all the test
-	   cases</p>
+	   cases</div>
 
 	
 	<!-- the entire body must be written by student -->
