--- a/main.html
+++ b/main.html
@@ -5,12 +5,19 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<!-- 
    <div>This is a demo of box model try to replicate this
 	   box model in Html and Css and try to pass all the test
-	   cases</div>
+	   cases</div> -->
 
-	
+	<div style="background-color: lightblue;
+	  width: 300px;
+	  border: 15px solid blue;
+	  padding: 50px;
+	  margin: 20px;">
+		This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
+	</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
